[package]
name = "webmocket"
version = "0.1.0"
edition = "2021"
description = "Websocket server for testing and development"
license = "MIT"
homepage = "https://github.com/berkes/webmocket"
repository = "https://github.com/berkes/webmocket"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.16", features = ["ws"] }
env_logger = "0.9.0"
futures = "0.3"
log = "0.4.17"
serde = { version = "1.0.144", features = ["derive"] }
tokio = { version = "1.21.1", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0.4"
reqwest = { version =  "0.11.11", features = ["blocking", "json"] }
temp-env = "0.3.0"
websocket = "0.26.5"
