[package]
name = "webmocket"
version = "0.6.2"
edition = "2021"
description = "Websocket server for testing and development"
license = "MIT"
homepage = "https://github.com/berkes/webmocket"
repository = "https://github.com/berkes/webmocket"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.16", features = ["ws"] }
futures = "0.3"
serde = { version = "1.0.144", features = ["derive"] }
tokio = { version = "1.24.2", features = ["full"] }
tower-http = { version = "0.3.0", features = ["trace"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.0.4"
reqwest = { version =  "0.11.11", features = ["blocking", "json"] }
temp-env = "0.3.0"
websocket = "0.26.5"
